# KDBoatDemo

./: CMakeLists.txt  README.md  data.qrc  imagesMaps.qrc  imagesMaps2.qrc  listmusic.cpp  main.cpp  musicmodel.cpp  musicmodel.h  qml.qrc  windowdata.cpp  windowdata.h
resources/: Main.qml  PlayItem.qml  music.txt
